updating operator group

--- a/keycloak-quarkus/operatorgroup.yaml
+++ b/keycloak-quarkus/operatorgroup.yaml
@@ -2,6 +2,7 @@ apiVersion: operators.coreos.com/v1
 kind: OperatorGroup
 metadata:
   name: rhbk-operator-group
+  namespace: rhbk-operator
 spec:
   targetNamespaces:
   -  rhbk-operator
