--- a/keycloak-quarkus/kustomization.yaml
+++ b/keycloak-quarkus/kustomization.yaml
@@ -7,4 +7,6 @@ resources:
   - postgres.yaml
   - postgres-svc.yaml
   - keycloak.yaml
-  - certificate.yaml  
+  - certificate.yaml
+  - operatorgroup.yaml
+  
