--- a/keycloak-quarkus/keycloakrealm.yaml
+++ b/keycloak-quarkus/keycloakrealm.yaml
@@ -2,6 +2,7 @@ apiVersion: k8s.keycloak.org/v2alpha1
 kind: KeycloakRealmImport
 metadata:
   name: test-realm
+  namespace: rhbk-operator
 spec:
   keycloakCRName: Realm to test declarative deployment using Openshift Gitops
   realm:
